--- a/GrooveSharkWindowsPhone/Views/PlayerView.xaml
+++ b/GrooveSharkWindowsPhone/Views/PlayerView.xaml
@@ -39,16 +39,16 @@
                     <PlaneProjection RotationY="50"/>
                 </StackPanel.Projection>
                 <Image HorizontalAlignment="Stretch" Margin="10" Source="{Binding ThumbnailUrl}" ></Image>
-                <TextBlock FontSize="15" TextAlignment="Center" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
-                <TextBlock FontSize="15" TextAlignment="Center" Text="{Binding ArtistName}"></TextBlock>
-                <TextBlock FontSize="15" TextAlignment="Center" Text="{Binding AlbumName}"></TextBlock>
-            </StackPanel>
+                <TextBlock FontSize="15" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
+                <TextBlock FontSize="15" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding ArtistName}"></TextBlock>
+                <TextBlock FontSize="15" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding AlbumName}"></TextBlock>
+            </StackPanel> 
 
             <StackPanel Grid.Column="1" VerticalAlignment="Center" DataContext="{Binding CurrentSong, Mode=OneWay}">
                 <Image HorizontalAlignment="Stretch" Margin="10" Source="{Binding ThumbnailUrl}" ></Image>
-                <TextBlock FontSize="20" TextAlignment="Center" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
-                <TextBlock FontSize="20" TextAlignment="Center" Text="{Binding ArtistName}"></TextBlock>
-                <TextBlock FontSize="20" TextAlignment="Center" Text="{Binding AlbumName}"></TextBlock>
+                <TextBlock FontSize="20" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
+                <TextBlock FontSize="20" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding ArtistName}"></TextBlock>
+                <TextBlock FontSize="20" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding AlbumName}"></TextBlock>
             </StackPanel>
 
             <StackPanel Grid.Column="2" VerticalAlignment="Center" DataContext="{Binding NextSong, Mode=OneWay}" RenderTransformOrigin="0.5,0.5">
@@ -56,12 +56,13 @@
                     <PlaneProjection RotationY="-50"/>
                 </StackPanel.Projection>
                 <Image HorizontalAlignment="Stretch" Margin="10" Source="{Binding ThumbnailUrl}" ></Image>
-                <TextBlock FontSize="15" TextAlignment="Center" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
-                <TextBlock FontSize="15" TextAlignment="Center" Text="{Binding ArtistName}"></TextBlock>
-                <TextBlock FontSize="15" TextAlignment="Center" Text="{Binding AlbumName}"></TextBlock>
+                <TextBlock FontSize="15" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SongName}" FontWeight="Bold"></TextBlock>
+                <TextBlock FontSize="15" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding ArtistName}"></TextBlock>
+                <TextBlock FontSize="15" TextWrapping="Wrap" TextAlignment="Center" Text="{Binding AlbumName}"></TextBlock>
             </StackPanel>
+            <ProgressBar Grid.Column="0" Grid.ColumnSpan="3" IsIndeterminate="False" Value="{Binding Position, Mode=OneWay}" Maximum="{Binding CurrentSongDuration, Mode=OneWay}" VerticalAlignment="Bottom" Margin="20" Height="3"></ProgressBar>
         </Grid>
-
+        
     </Grid>
 
     <Page.BottomAppBar>
