Add button template +  synchronize playing songs

--- a/GrooveSharkWindowsPhone/Ressources/Converters.xaml
+++ b/GrooveSharkWindowsPhone/Ressources/Converters.xaml
@@ -6,5 +6,6 @@
     
     <converters:NullOrEmptyToVisibilityConverter x:Name="NullOrEmptyToVisibilityConverter"></converters:NullOrEmptyToVisibilityConverter>
     <converters:BoolToVisibilityInvertConverter x:Name="BoolToVisibilityInvertConverter"></converters:BoolToVisibilityInvertConverter>
-    
+    <converters:TimeSpanToStringConverter x:Name="TimeSpanToStringConverter"></converters:TimeSpanToStringConverter>
+
 </ResourceDictionary>
