--- a/GrooveSharkWindowsPhone/App.xaml
+++ b/GrooveSharkWindowsPhone/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Ressources/ListViewStyles.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Ressources/DataTemplates.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Ressources/Converters.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Ressources/ButtonTemplates.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
