--- a/GrooveSharkWindowsPhone/App.xaml
+++ b/GrooveSharkWindowsPhone/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Ressources/DataTemplates.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Ressources/Converters.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Ressources/ButtonTemplates.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Ressources/TextBoxTemplate.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
