--- a/GrooveSharkWindowsPhone/UserControls/UCSearch.xaml
+++ b/GrooveSharkWindowsPhone/UserControls/UCSearch.xaml
@@ -48,7 +48,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBox Text="{Binding SearchTerm, Mode=TwoWay}" PlaceholderText="Search for songs, artists or playlists" ></TextBox>
+            <TextBox Text="{Binding SearchTerm, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PlaceholderText="Search for songs, artists or playlists" Style="{StaticResource TextBoxStyle1}" ></TextBox>
             <Button Style="{StaticResource GrooveSharkButton}" Grid.Column="1" Content="Go" Margin="5,0,0,0" Command="{Binding SearchCommand}"></Button>
         </Grid>
 
